--- a/style.css
+++ b/style.css
@@ -126,3 +126,35 @@ body {
   color: var(--pink);
   background-color: var(--white);
 }
+
+
+/* ------- ABOUT SECTION -------- */
+
+.about {
+    height: 100vh;
+    background-color: var(--pink);
+}
+
+.about__container {
+    background-color: var(--white);
+    display: flex;
+    justify-content: space-around;
+}
+
+.about__content {
+    width: 800px;
+}
+
+
+.about__subtitle {
+    color: var(--blue);
+    font-size: 2rem;
+}
+
+.about__title {
+    font-size: 2.5rem;
+}
+
+.about__description {
+    font-size: 1.5rem;
+}
