--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+
 }
 
 .home__title {
@@ -131,7 +132,7 @@ body {
 /* ------- ABOUT SECTION -------- */
 
 .about {
-    height: 100vh;
+    height: 80vh;
     background-color: var(--pink);
 }
 
@@ -157,4 +158,96 @@ body {
 
 .about__description {
     font-size: 1.5rem;
+}
+
+/* ------------- MENU SECTION ----------*/
+.menu__container {
+  background-color: var(--white);
+
+}
+
+.menu__title {
+  background-color: var(--pink);
+  color: var(--white);
+  font-size: 3rem;
+  padding: 0 0 5rem 7rem;
+  border-bottom-left-radius: 10rem;
+  border-bottom-right-radius: 10rem;
+}
+
+.card__container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-top: 3rem;
+}
+
+.card {
+  width: 300px;
+  height: 400px;
+  border-radius: 2rem;
+  overflow: hidden;
+  text-align: center;
+  margin-bottom: 20px;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.card:hover {
+background-color: rgb(224, 224, 224);
+transform: scale(1.05);
+}
+
+.card__image {
+  width: auto;
+  height: 200px;
+  object-fit: cover;
+}
+
+.card__content {
+  padding: 15px;
+  text-align: center;
+}
+
+.card__title {
+  margin-bottom: 1rem;
+  margin-top: 2rem;
+}
+
+.card__price {
+  margin: 0;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #f00;
+}
+
+.card__button {
+  position: relative;
+  top: -1.8rem;
+  left: 6.5rem;
+  background-color: var(--pink);
+  border: none;
+  font-size: 2rem;
+  padding: 1rem 2rem;
+  color: var(--white); 
+  border-bottom-right-radius: 2rem;
+  border-top-left-radius: 2rem;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.card__button:hover {
+  background-color: #c52f5c;
+}
+.card--sprinkles {
+  color: var(--pink);
+}
+
+.card--banana {
+  color: #EAB444;
+}
+
+.card--choco {
+  color: #341E19;
 }
